# moogFilter

./: CMakeLists.txt  README.md
source/: DistrhoPluginInfo.h  moogFilter.cpp  moogFilter.hpp
